--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
-h1::first-letter {
-    font-size: 70px;
-    font-style: italic;
-    color: goldenrod;
+/*body {
+     font-size: 20px; 
+}
+*/
+h1, P {
+    /*font-size: 3em; /*  em is related to parent element font size and 
+                        if font size is not available for any parent it will follow the 
+                        standard value for html element 16px */
+    /* font-size: 3rem; rem follows the html reference only which is 16px*/
 }
 
-h1::before {
-    content: "This is ";
-    color: green;
-}
+ /*div {
+    font-size: 10px; 
+}*/
 
-h1::after {
-    content:" and its useless.";
+section {
     font-size: 30px;
-    color: green;
+    background-color: orangered;
+    color: white;
+    /* width: 70%; */
+    height: 100vh;
+}
+
+h1 {
+    font-size: 200%; /*According to the closest parent.*/
+}
+
+section div {
+    background-color: green;
+    /* width: 50%; */
 }
